--- a/sample_app/app/views/static_pages/home.html.erb
+++ b/sample_app/app/views/static_pages/home.html.erb
@@ -1,15 +1,13 @@
 <div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
+  <h1>Welcome to Troutzoid</h1>
 
   <h2>
-    This is the home page for the
-    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
+    This is the home page for the Troutzoid
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
+<%= link_to image_tag("rails.png", alt: "Rails logo", :class => "img-rounded"),
             'http://rubyonrails.org/' %>
