--- a/sample_app/app/views/static_pages/home.html.erb
+++ b/sample_app/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
   <h1>Welcome to the Sample App</h1>
 
   <h2>
-    This is the home page for the Troutzoid
+    This is the home page for Sample App
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
